# kiro-studio

./: rustfmt.toml
kiro-midi/: Cargo.toml
kiro-midi/examples/: receive.rs
kiro-midi/src/: endpoints.rs  main.rs
kiro-midi/src/drivers/: mod.rs
kiro-midi/src/drivers/coremidi/: driver.rs  mod.rs
kiro-midi/src/drivers/jackmidi/: driver.rs  endpoints.rs  mod.rs
kiro-midi/src/protocol/: decoder.rs
kiro-midi/src/protocol/messages/: channel_voice.rs  mod.rs
