[package]
name = "kiro-midi"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2021"

[dependencies]
thiserror = "1.0"
ringbuf = "0.2"
regex = "1.5"
enum_dispatch = "0.3"
arc-swap = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
jack = "0.9.2"
byteorder = "1.4.3"

[target.'cfg(target_os = "macos")'.dependencies]
parking_lot = "0.12"
lazy_static = "1.4"

core-foundation-sys = "0.8.3"
core-foundation = "0.9.3"
#coremidi = { path = "../../coremidi" }
#coremidi = { git = "https://github.com/chris-zen/coremidi.git", branch = "master" }
coremidi = "0.7.0"
